--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">JetpackDemo</string>
+    <string name="title_activity_basic_usage">BasicUsageActivity</string>
+    <string name="title_activity_header_proxy">HeaderProxyActivity</string>
 </resources>
